fixed overflow bug in home

--- a/andy-website/src/Components/css/Home.css
+++ b/andy-website/src/Components/css/Home.css
@@ -1,7 +1,7 @@
 .Home {
     width: 100%;
     height: 100vh;
-
+    overflow: hidden;
   }
   
 
